# python-project-174

./: .coverage  Makefile  README.md  archivo_prueba.py  coverage.xml  diferencias.cast  pyproject.toml
.github/workflows/: ci.yml
coverage/: codeclimate.json
gendiff/: diff.py  parser.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
