[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Jacobo Jaramillo <jacobo.jaramillo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[[tool.poetry.packages]]
include = "gendiff"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


